Fixed a bug related inconsistent alignment in works-step button

--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -84,7 +84,7 @@
        font-size: 120%;
      }
 
-    .works-step { margin-bottom: 20px; }
+    .works-step { margin-bottom: 35px; }
     .works-step:last-of-type { margin-bottom: 20px; }
     
 }
